--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&family=Roboto+Slab&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="youtube-CSS/General.css">
         <link rel="stylesheet" href="youtube-CSS/Header.css">
-        <link rel="stylesheet" href="youtube-CSS/Content.css">
+        <link rel="stylesheet" href="youtube-CSS/content.css">
         <link rel="stylesheet" href="youtube-CSS/Sidebar.css">
         </head>
     <body class="body">
